# turn off warnings
set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -w")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -w")

add_library(boost_serialization archive_exception.cpp basic_archive.cpp basic_iarchive.cpp basic_iserializer.cpp basic_oarchive.cpp basic_oserializer.cpp basic_pointer_iserializer.cpp basic_pointer_oserializer.cpp basic_serializer_map.cpp basic_text_iprimitive.cpp basic_text_oprimitive.cpp basic_text_wiprimitive.cpp basic_text_woprimitive.cpp basic_xml_archive.cpp basic_xml_grammar.ipp binary_iarchive.cpp binary_oarchive.cpp binary_wiarchive.cpp binary_woarchive.cpp codecvt_null.cpp extended_type_info.cpp extended_type_info_no_rtti.cpp extended_type_info_typeid.cpp polymorphic_iarchive.cpp polymorphic_oarchive.cpp shared_ptr_helper.cpp stl_port.cpp text_iarchive.cpp text_oarchive.cpp text_wiarchive.cpp text_woarchive.cpp utf8_codecvt_facet.cpp void_cast.cpp xml_archive_exception.cpp xml_grammar.cpp xml_iarchive.cpp xml_oarchive.cpp xml_wgrammar.cpp xml_wiarchive.cpp xml_woarchive.cpp)